Changed login and register links to buttons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
         <main>
             <h1 id="title">MinimaList</h1>
-            <p id="login" class="auth"><a href="login.html">Login</a></p>
-            <p id="register" class="auth"><a href="register.html">Create an account</a></p>
+            <button id="login" class="auth"><a href="login.html">Login</a></button><br>
+            <button id="register" class="auth"><a href="register.html">Create an account</a></button>
         </main>
     </body>
     <footer>
