Fixed id labels

--- a/login.html
+++ b/login.html
@@ -7,9 +7,9 @@
         <main>
             <h1 id="title">MinimaList</h1>
             <form action="list.html" method="post">
-                <label for="username">Username: </label>
+                <label id="label">Username: </label>
                 <textarea id="textbox">Enter Username</textarea><br>
-                <label for="password">Password: </label>
+                <label id="label">Password: </label>
                 <textarea id="textbox">Enter Password</textarea><br>
                 <button type="submit">Sign in</button>
               </form>
