--- a/register.html
+++ b/register.html
@@ -7,12 +7,9 @@
         <main>
             <h1 id="title">MinimaList</h1>
             <form action="list.html" method="post">
-                <label id="label">Username: </label>
-                <textarea id="textbox">Enter Username</textarea><br>
-                <label id="label">Password: </label>
-                <textarea id="textbox">Enter Password</textarea><br>
-                <label id="label">Name: </label>
-                <textarea id="textbox">Enter Name</textarea><br>
+                <label id="label">Username: </label> <input type="text" placeholder="Enter Username"><br>
+                <label id="label">Password: </label> <input type="password" placeholder="Enter Password"/><br>
+                <label id="label">Name: </label> <input type="text" placeholder="Enter Name"/><br>
                 <button type="submit">Create account</button>
               </form>
         </main>
