--- a/login.html
+++ b/login.html
@@ -7,10 +7,8 @@
         <main>
             <h1 id="title">MinimaList</h1>
             <form action="list.html" method="post">
-                <label id="label">Username: </label>
-                <textarea id="textbox">Enter Username</textarea><br>
-                <label id="label">Password: </label>
-                <textarea id="textbox">Enter Password</textarea><br>
+                <label id="label">Username: </label> <input type="text" placeholder="Enter Username"><br>
+                <label id="label">Password: </label> <input type="password" placeholder="Enter Password"/><br>
                 <button type="submit">Sign in</button>
               </form>
         </main>
