--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <body>
         <main>
             <h1 id="title">MinimaList</h1>
-            <form action="list.html" method="post">
+            <form action="list.html" method="get">
                 <label id="label">Username: </label> <input type="text" placeholder="Enter Username"><br>
                 <label id="label">Password: </label> <input type="password" placeholder="Enter Password"/><br>
                 <label id="label">Name: </label> <input type="text" placeholder="Enter Name"/><br>
