Added my name to home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
         </main>
     </body>
     <footer>
-        <p id="github"><a href="https://github.com/rachelstans/MinimaListWebsite">Github Link</a></p>
+        <p id="github"><a href="https://github.com/rachelstans/MinimaListWebsite">Rachel George's Github</a></p>
     </footer>
 </html>
