Added placeholder to-do list items

--- a/list.html
+++ b/list.html
@@ -22,8 +22,8 @@
                         <th>Sun 6.18</th>
                     </tr>
                     <tr>
-                        <th>__________</th>
-                        <th>__________</th>
+                        <th>clean room</th>
+                        <th>quiz 7</th>
                         <th>__________</th>
                         <th>__________</th>
                         <th>__________</th>
@@ -31,7 +31,7 @@
                         <th>__________</th>
                     </tr>
                     <tr>
-                        <th>__________</th>
+                        <th>lunch w/friend at 1pm</th>
                         <th>__________</th>
                         <th>__________</th>
                         <th>__________</th>
