--- a/list.html
+++ b/list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <head>
         <title>MinimaList</title>
@@ -8,6 +9,7 @@
         <main>
             <h1 id="title">MinimaList</h1>
             <h2>[User's name]'s To Do List for the Week</h2>
+            <span class="material-symbols-outlined">ios_share</span>
             <span class="material-symbols-rounded">chevron_left</span>
             <span class="material-symbols-rounded">chevron_right</span>
             <section>
