--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <main>
             <h1 id="title">MinimaList</h1>
+            <img alt="checkbox" src="https://icons.veryicon.com/png/o/miscellaneous/zr_icon/checkbox-5.png" />
             <button id="login" class="auth"><a href="login.html">Login</a></button><br>
             <button id="register" class="auth"><a href="register.html">Create an account</a></button>
         </main>
