--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
         <!-- Tell browsers not to scale the viewport automatically -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MinimaList</title>
+
+        <link rel="stylesheet" href="main.css" />
     </head>
     <body>
+        <header>
+            <div class="img"><img alt="lightbulb" src="https://www.lampandlight.eu/media/catalog/product/9/2/6963_92977_0.jpg" /></div>
+            <div class="box" style="width:30px;height:30px;"></div> 
+            <div class="title"><h1>MinimaList</h1></div> 
+        </header>
         <main>
-            <h1 id="title">MinimaList</h1>
-            <img alt="checkbox" src="https://icons.veryicon.com/png/o/miscellaneous/zr_icon/checkbox-5.png" />
-            <button id="login" class="auth"><a href="login.html">Login</a></button><br>
+            <div class="hr4"></div>
+            <button id="login" type="button" class="auth"><a href="login.html">Login</a></button><br>
             <button id="register" class="auth"><a href="register.html">Create an account</a></button>
         </main>
     </body>
     <footer>
-        <p id="github"><a href="https://github.com/rachelstans/MinimaListWebsite">Rachel George's Github</a></p>
+        <p id="github"><a href="https://github.com/rachelstans/MinimaListWebsite">Rachel George's Github :)</a></p>
     </footer>
 </html>
