Changed file names to match previous change

--- a/login.html
+++ b/login.html
@@ -6,14 +6,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MinimaList</title>
 
-        <link rel="stylesheet" href="login.css" />
+        <link rel="stylesheet" href="auth.css" />
     </head>
     <body>
         <header>
             <div class="title"><h1>MinimaList</h1></div> 
         </header>
-        <main>
-            <form action="list.html" method="get" class="login">
+        <main style="margin-top: 0.5%;">
+            <form action="list.html" method="get" class="auth">
                 <h2>Login</h2>
                 <div class="form-input-material">
                     <input type="text" name="username" id="username" placeholder="Username" autocomplete="off" class="form-control-material" required />
