--- a/register.html
+++ b/register.html
@@ -5,15 +5,26 @@
         <!-- Tell browsers not to scale the viewport automatically -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>MinimaList</title>
+
+        <link rel="stylesheet" href="auth.css" />
     </head>
     <body>
-        <main>
-            <h1 id="title">MinimaList</h1>
-            <form action="list.html" method="get">
-                <label id="label">Username: </label> <input type="text" placeholder="Enter Username"><br>
-                <label id="label">Password: </label> <input type="password" placeholder="Enter Password"/><br>
-                <label id="label">Name: </label> <input type="text" placeholder="Enter Name"/><br>
-                <button type="submit">Create account</button>
+        <header>
+            <div class="title"><h1>MinimaList</h1></div> 
+        </header>
+        <main style="margin-top: -1%;">
+            <form action="list.html" method="get" class="auth">
+                <h2>Create Account</h2>
+                <div class="form-input-material">
+                    <input type="text" name="username" id="username" placeholder="Username" autocomplete="off" class="form-control-material" required />
+                </div>
+                <div class="form-input-material">
+                    <input type="password" name="password" id="password" placeholder="Password" autocomplete="off" class="form-control-material" required />
+                </div>
+                <div class="form-input-material">
+                    <input type="text" name="username" id="username" placeholder="Name" autocomplete="off" class="form-control-material" required />
+                </div>
+                <button type="submit" class="button">Create account</button>
               </form>
         </main>
     </body>
